--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@ Absolutely! Here's a clean and stylish clothing website built using HTML and CSS
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>StyleHub Clothing</title>
   <link rel="stylesheet" href="style.css">
+
+
+
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VRY2QE28CB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VRY2QE28CB');
+</script>
 </head>
 <body>
   <header>
@@ -153,5 +166,6 @@ footer {
 }
 
 
+
 
 Would you like to add a login page, shopping cart, or filter options next? I can help you build a full e-commerce experience.
